{
  "version": 4,
  "terraform_version": "1.10.5",
  "serial": 312,
  "lineage": "24e9d1ba-5975-2492-9844-398ee06659db",
  "resources": [
    {
      "module": "module.ecs",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "backend",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:654654523718:targetgroup/walter-cluster-backend-tg/18c5dd0ac459c69d",
            "arn_suffix": "targetgroup/walter-cluster-backend-tg/18c5dd0ac459c69d",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:654654523718:targetgroup/walter-cluster-backend-tg/18c5dd0ac459c69d",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "walter-cluster-backend-tg",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0ca6a1fee11b317af"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.firewall.module.bastion_sg.aws_security_group.this",
            "module.firewall.module.bastion_sg.aws_security_group.this_name_prefix",
            "module.firewall.module.bastion_sg.aws_security_group_rule.computed_egress_rules",
            "module.firewall.module.bastion_sg.aws_security_group_rule.computed_egress_with_cidr_blocks",
            "module.firewall.module.bastion_sg.aws_security_group_rule.computed_egress_with_ipv6_cidr_blocks",
            "module.firewall.module.bastion_sg.aws_security_group_rule.computed_egress_with_prefix_list_ids",
            "module.firewall.module.bastion_sg.aws_security_group_rule.computed_egress_with_self",
            "module.firewall.module.bastion_sg.aws_security_group_rule.computed_egress_with_source_security_group_id",
            "module.firewall.module.bastion_sg.aws_security_group_rule.computed_ingress_rules",
            "module.firewall.module.bastion_sg.aws_security_group_rule.computed_ingress_with_cidr_blocks",
            "module.firewall.module.bastion_sg.aws_security_group_rule.computed_ingress_with_ipv6_cidr_blocks",
            "module.firewall.module.bastion_sg.aws_security_group_rule.computed_ingress_with_prefix_list_ids",
            "module.firewall.module.bastion_sg.aws_security_group_rule.computed_ingress_with_self",
            "module.firewall.module.bastion_sg.aws_security_group_rule.computed_ingress_with_source_security_group_id",
            "module.firewall.module.bastion_sg.aws_security_group_rule.egress_rules",
            "module.firewall.module.bastion_sg.aws_security_group_rule.egress_with_cidr_blocks",
            "module.firewall.module.bastion_sg.aws_security_group_rule.egress_with_ipv6_cidr_blocks",
            "module.firewall.module.bastion_sg.aws_security_group_rule.egress_with_prefix_list_ids",
            "module.firewall.module.bastion_sg.aws_security_group_rule.egress_with_self",
            "module.firewall.module.bastion_sg.aws_security_group_rule.egress_with_source_security_group_id",
            "module.firewall.module.bastion_sg.aws_security_group_rule.ingress_rules",
            "module.firewall.module.bastion_sg.aws_security_group_rule.ingress_with_cidr_blocks",
            "module.firewall.module.bastion_sg.aws_security_group_rule.ingress_with_ipv6_cidr_blocks",
            "module.firewall.module.bastion_sg.aws_security_group_rule.ingress_with_prefix_list_ids",
            "module.firewall.module.bastion_sg.aws_security_group_rule.ingress_with_self",
            "module.firewall.module.bastion_sg.aws_security_group_rule.ingress_with_source_security_group_id",
            "module.firewall.module.documentdb_sg.aws_security_group.this",
            "module.firewall.module.documentdb_sg.aws_security_group.this_name_prefix",
            "module.firewall.module.documentdb_sg.aws_security_group_rule.computed_egress_rules",
            "module.firewall.module.documentdb_sg.aws_security_group_rule.computed_egress_with_cidr_blocks",
            "module.firewall.module.documentdb_sg.aws_security_group_rule.computed_egress_with_ipv6_cidr_blocks",
            "module.firewall.module.documentdb_sg.aws_security_group_rule.computed_egress_with_prefix_list_ids",
            "module.firewall.module.documentdb_sg.aws_security_group_rule.computed_egress_with_self",
            "module.firewall.module.documentdb_sg.aws_security_group_rule.computed_egress_with_source_security_group_id",
            "module.firewall.module.documentdb_sg.aws_security_group_rule.computed_ingress_rules",
            "module.firewall.module.documentdb_sg.aws_security_group_rule.computed_ingress_with_cidr_blocks",
            "module.firewall.module.documentdb_sg.aws_security_group_rule.computed_ingress_with_ipv6_cidr_blocks",
            "module.firewall.module.documentdb_sg.aws_security_group_rule.computed_ingress_with_prefix_list_ids",
            "module.firewall.module.documentdb_sg.aws_security_group_rule.computed_ingress_with_self",
            "module.firewall.module.documentdb_sg.aws_security_group_rule.computed_ingress_with_source_security_group_id",
            "module.firewall.module.documentdb_sg.aws_security_group_rule.egress_rules",
            "module.firewall.module.documentdb_sg.aws_security_group_rule.egress_with_cidr_blocks",
            "module.firewall.module.documentdb_sg.aws_security_group_rule.egress_with_ipv6_cidr_blocks",
            "module.firewall.module.documentdb_sg.aws_security_group_rule.egress_with_prefix_list_ids",
            "module.firewall.module.documentdb_sg.aws_security_group_rule.egress_with_self",
            "module.firewall.module.documentdb_sg.aws_security_group_rule.egress_with_source_security_group_id",
            "module.firewall.module.documentdb_sg.aws_security_group_rule.ingress_rules",
            "module.firewall.module.documentdb_sg.aws_security_group_rule.ingress_with_cidr_blocks",
            "module.firewall.module.documentdb_sg.aws_security_group_rule.ingress_with_ipv6_cidr_blocks",
            "module.firewall.module.documentdb_sg.aws_security_group_rule.ingress_with_prefix_list_ids",
            "module.firewall.module.documentdb_sg.aws_security_group_rule.ingress_with_self",
            "module.firewall.module.documentdb_sg.aws_security_group_rule.ingress_with_source_security_group_id",
            "module.firewall.module.ecs_sg.aws_security_group.this",
            "module.firewall.module.ecs_sg.aws_security_group.this_name_prefix",
            "module.firewall.module.ecs_sg.aws_security_group_rule.computed_egress_rules",
            "module.firewall.module.ecs_sg.aws_security_group_rule.computed_egress_with_cidr_blocks",
            "module.firewall.module.ecs_sg.aws_security_group_rule.computed_egress_with_ipv6_cidr_blocks",
            "module.firewall.module.ecs_sg.aws_security_group_rule.computed_egress_with_prefix_list_ids",
            "module.firewall.module.ecs_sg.aws_security_group_rule.computed_egress_with_self",
            "module.firewall.module.ecs_sg.aws_security_group_rule.computed_egress_with_source_security_group_id",
            "module.firewall.module.ecs_sg.aws_security_group_rule.computed_ingress_rules",
            "module.firewall.module.ecs_sg.aws_security_group_rule.computed_ingress_with_cidr_blocks",
            "module.firewall.module.ecs_sg.aws_security_group_rule.computed_ingress_with_ipv6_cidr_blocks",
            "module.firewall.module.ecs_sg.aws_security_group_rule.computed_ingress_with_prefix_list_ids",
            "module.firewall.module.ecs_sg.aws_security_group_rule.computed_ingress_with_self",
            "module.firewall.module.ecs_sg.aws_security_group_rule.computed_ingress_with_source_security_group_id",
            "module.firewall.module.ecs_sg.aws_security_group_rule.egress_rules",
            "module.firewall.module.ecs_sg.aws_security_group_rule.egress_with_cidr_blocks",
            "module.firewall.module.ecs_sg.aws_security_group_rule.egress_with_ipv6_cidr_blocks",
            "module.firewall.module.ecs_sg.aws_security_group_rule.egress_with_prefix_list_ids",
            "module.firewall.module.ecs_sg.aws_security_group_rule.egress_with_self",
            "module.firewall.module.ecs_sg.aws_security_group_rule.egress_with_source_security_group_id",
            "module.firewall.module.ecs_sg.aws_security_group_rule.ingress_rules",
            "module.firewall.module.ecs_sg.aws_security_group_rule.ingress_with_cidr_blocks",
            "module.firewall.module.ecs_sg.aws_security_group_rule.ingress_with_ipv6_cidr_blocks",
            "module.firewall.module.ecs_sg.aws_security_group_rule.ingress_with_prefix_list_ids",
            "module.firewall.module.ecs_sg.aws_security_group_rule.ingress_with_self",
            "module.firewall.module.ecs_sg.aws_security_group_rule.ingress_with_source_security_group_id",
            "module.firewall.module.load_balancer_sg.aws_security_group.this",
            "module.firewall.module.load_balancer_sg.aws_security_group.this_name_prefix",
            "module.firewall.module.load_balancer_sg.aws_security_group_rule.computed_egress_rules",
            "module.firewall.module.load_balancer_sg.aws_security_group_rule.computed_egress_with_cidr_blocks",
            "module.firewall.module.load_balancer_sg.aws_security_group_rule.computed_egress_with_ipv6_cidr_blocks",
            "module.firewall.module.load_balancer_sg.aws_security_group_rule.computed_egress_with_prefix_list_ids",
            "module.firewall.module.load_balancer_sg.aws_security_group_rule.computed_egress_with_self",
            "module.firewall.module.load_balancer_sg.aws_security_group_rule.computed_egress_with_source_security_group_id",
            "module.firewall.module.load_balancer_sg.aws_security_group_rule.computed_ingress_rules",
            "module.firewall.module.load_balancer_sg.aws_security_group_rule.computed_ingress_with_cidr_blocks",
            "module.firewall.module.load_balancer_sg.aws_security_group_rule.computed_ingress_with_ipv6_cidr_blocks",
            "module.firewall.module.load_balancer_sg.aws_security_group_rule.computed_ingress_with_prefix_list_ids",
            "module.firewall.module.load_balancer_sg.aws_security_group_rule.computed_ingress_with_self",
            "module.firewall.module.load_balancer_sg.aws_security_group_rule.computed_ingress_with_source_security_group_id",
            "module.firewall.module.load_balancer_sg.aws_security_group_rule.egress_rules",
            "module.firewall.module.load_balancer_sg.aws_security_group_rule.egress_with_cidr_blocks",
            "module.firewall.module.load_balancer_sg.aws_security_group_rule.egress_with_ipv6_cidr_blocks",
            "module.firewall.module.load_balancer_sg.aws_security_group_rule.egress_with_prefix_list_ids",
            "module.firewall.module.load_balancer_sg.aws_security_group_rule.egress_with_self",
            "module.firewall.module.load_balancer_sg.aws_security_group_rule.egress_with_source_security_group_id",
            "module.firewall.module.load_balancer_sg.aws_security_group_rule.ingress_rules",
            "module.firewall.module.load_balancer_sg.aws_security_group_rule.ingress_with_cidr_blocks",
            "module.firewall.module.load_balancer_sg.aws_security_group_rule.ingress_with_ipv6_cidr_blocks",
            "module.firewall.module.load_balancer_sg.aws_security_group_rule.ingress_with_prefix_list_ids",
            "module.firewall.module.load_balancer_sg.aws_security_group_rule.ingress_with_self",
            "module.firewall.module.load_balancer_sg.aws_security_group_rule.ingress_with_source_security_group_id",
            "module.firewall.module.service_sg.aws_security_group.this",
            "module.firewall.module.service_sg.aws_security_group.this_name_prefix",
            "module.firewall.module.service_sg.aws_security_group_rule.computed_egress_rules",
            "module.firewall.module.service_sg.aws_security_group_rule.computed_egress_with_cidr_blocks",
            "module.firewall.module.service_sg.aws_security_group_rule.computed_egress_with_ipv6_cidr_blocks",
            "module.firewall.module.service_sg.aws_security_group_rule.computed_egress_with_prefix_list_ids",
            "module.firewall.module.service_sg.aws_security_group_rule.computed_egress_with_self",
            "module.firewall.module.service_sg.aws_security_group_rule.computed_egress_with_source_security_group_id",
            "module.firewall.module.service_sg.aws_security_group_rule.computed_ingress_rules",
            "module.firewall.module.service_sg.aws_security_group_rule.computed_ingress_with_cidr_blocks",
            "module.firewall.module.service_sg.aws_security_group_rule.computed_ingress_with_ipv6_cidr_blocks",
            "module.firewall.module.service_sg.aws_security_group_rule.computed_ingress_with_prefix_list_ids",
            "module.firewall.module.service_sg.aws_security_group_rule.computed_ingress_with_self",
            "module.firewall.module.service_sg.aws_security_group_rule.computed_ingress_with_source_security_group_id",
            "module.firewall.module.service_sg.aws_security_group_rule.egress_rules",
            "module.firewall.module.service_sg.aws_security_group_rule.egress_with_cidr_blocks",
            "module.firewall.module.service_sg.aws_security_group_rule.egress_with_ipv6_cidr_blocks",
            "module.firewall.module.service_sg.aws_security_group_rule.egress_with_prefix_list_ids",
            "module.firewall.module.service_sg.aws_security_group_rule.egress_with_self",
            "module.firewall.module.service_sg.aws_security_group_rule.egress_with_source_security_group_id",
            "module.firewall.module.service_sg.aws_security_group_rule.ingress_rules",
            "module.firewall.module.service_sg.aws_security_group_rule.ingress_with_cidr_blocks",
            "module.firewall.module.service_sg.aws_security_group_rule.ingress_with_ipv6_cidr_blocks",
            "module.firewall.module.service_sg.aws_security_group_rule.ingress_with_prefix_list_ids",
            "module.firewall.module.service_sg.aws_security_group_rule.ingress_with_self",
            "module.firewall.module.service_sg.aws_security_group_rule.ingress_with_source_security_group_id",
            "module.scaling.aws_autoscaling_group.this",
            "module.scaling.aws_iam_instance_profile.ecs_profile",
            "module.scaling.aws_iam_role.role",
            "module.scaling.aws_iam_role_policy.attach_role_policy",
            "module.scaling.aws_iam_role_policy_attachment.ecs_node_role_policy",
            "module.scaling.aws_launch_template.this",
            "module.scaling.data.aws_ami.amazon_linux",
            "module.scaling.data.aws_iam_policy_document.assume_role",
            "module.scaling.data.aws_iam_policy_document.workloads",
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.gw",
            "module.vpc.aws_nat_gateway.nat",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_route_table_association.private",
            "module.vpc.aws_route_table_association.public",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.ecs",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "frontend",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:654654523718:targetgroup/walter-cluster-frontend-tg/de0e160420188f1c",
            "arn_suffix": "targetgroup/walter-cluster-frontend-tg/de0e160420188f1c",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:654654523718:targetgroup/walter-cluster-frontend-tg/de0e160420188f1c",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "walter-cluster-frontend-tg",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0ca6a1fee11b317af"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.firewall.module.bastion_sg.aws_security_group.this",
            "module.firewall.module.bastion_sg.aws_security_group.this_name_prefix",
            "module.firewall.module.bastion_sg.aws_security_group_rule.computed_egress_rules",
            "module.firewall.module.bastion_sg.aws_security_group_rule.computed_egress_with_cidr_blocks",
            "module.firewall.module.bastion_sg.aws_security_group_rule.computed_egress_with_ipv6_cidr_blocks",
            "module.firewall.module.bastion_sg.aws_security_group_rule.computed_egress_with_prefix_list_ids",
            "module.firewall.module.bastion_sg.aws_security_group_rule.computed_egress_with_self",
            "module.firewall.module.bastion_sg.aws_security_group_rule.computed_egress_with_source_security_group_id",
            "module.firewall.module.bastion_sg.aws_security_group_rule.computed_ingress_rules",
            "module.firewall.module.bastion_sg.aws_security_group_rule.computed_ingress_with_cidr_blocks",
            "module.firewall.module.bastion_sg.aws_security_group_rule.computed_ingress_with_ipv6_cidr_blocks",
            "module.firewall.module.bastion_sg.aws_security_group_rule.computed_ingress_with_prefix_list_ids",
            "module.firewall.module.bastion_sg.aws_security_group_rule.computed_ingress_with_self",
            "module.firewall.module.bastion_sg.aws_security_group_rule.computed_ingress_with_source_security_group_id",
            "module.firewall.module.bastion_sg.aws_security_group_rule.egress_rules",
            "module.firewall.module.bastion_sg.aws_security_group_rule.egress_with_cidr_blocks",
            "module.firewall.module.bastion_sg.aws_security_group_rule.egress_with_ipv6_cidr_blocks",
            "module.firewall.module.bastion_sg.aws_security_group_rule.egress_with_prefix_list_ids",
            "module.firewall.module.bastion_sg.aws_security_group_rule.egress_with_self",
            "module.firewall.module.bastion_sg.aws_security_group_rule.egress_with_source_security_group_id",
            "module.firewall.module.bastion_sg.aws_security_group_rule.ingress_rules",
            "module.firewall.module.bastion_sg.aws_security_group_rule.ingress_with_cidr_blocks",
            "module.firewall.module.bastion_sg.aws_security_group_rule.ingress_with_ipv6_cidr_blocks",
            "module.firewall.module.bastion_sg.aws_security_group_rule.ingress_with_prefix_list_ids",
            "module.firewall.module.bastion_sg.aws_security_group_rule.ingress_with_self",
            "module.firewall.module.bastion_sg.aws_security_group_rule.ingress_with_source_security_group_id",
            "module.firewall.module.documentdb_sg.aws_security_group.this",
            "module.firewall.module.documentdb_sg.aws_security_group.this_name_prefix",
            "module.firewall.module.documentdb_sg.aws_security_group_rule.computed_egress_rules",
            "module.firewall.module.documentdb_sg.aws_security_group_rule.computed_egress_with_cidr_blocks",
            "module.firewall.module.documentdb_sg.aws_security_group_rule.computed_egress_with_ipv6_cidr_blocks",
            "module.firewall.module.documentdb_sg.aws_security_group_rule.computed_egress_with_prefix_list_ids",
            "module.firewall.module.documentdb_sg.aws_security_group_rule.computed_egress_with_self",
            "module.firewall.module.documentdb_sg.aws_security_group_rule.computed_egress_with_source_security_group_id",
            "module.firewall.module.documentdb_sg.aws_security_group_rule.computed_ingress_rules",
            "module.firewall.module.documentdb_sg.aws_security_group_rule.computed_ingress_with_cidr_blocks",
            "module.firewall.module.documentdb_sg.aws_security_group_rule.computed_ingress_with_ipv6_cidr_blocks",
            "module.firewall.module.documentdb_sg.aws_security_group_rule.computed_ingress_with_prefix_list_ids",
            "module.firewall.module.documentdb_sg.aws_security_group_rule.computed_ingress_with_self",
            "module.firewall.module.documentdb_sg.aws_security_group_rule.computed_ingress_with_source_security_group_id",
            "module.firewall.module.documentdb_sg.aws_security_group_rule.egress_rules",
            "module.firewall.module.documentdb_sg.aws_security_group_rule.egress_with_cidr_blocks",
            "module.firewall.module.documentdb_sg.aws_security_group_rule.egress_with_ipv6_cidr_blocks",
            "module.firewall.module.documentdb_sg.aws_security_group_rule.egress_with_prefix_list_ids",
            "module.firewall.module.documentdb_sg.aws_security_group_rule.egress_with_self",
            "module.firewall.module.documentdb_sg.aws_security_group_rule.egress_with_source_security_group_id",
            "module.firewall.module.documentdb_sg.aws_security_group_rule.ingress_rules",
            "module.firewall.module.documentdb_sg.aws_security_group_rule.ingress_with_cidr_blocks",
            "module.firewall.module.documentdb_sg.aws_security_group_rule.ingress_with_ipv6_cidr_blocks",
            "module.firewall.module.documentdb_sg.aws_security_group_rule.ingress_with_prefix_list_ids",
            "module.firewall.module.documentdb_sg.aws_security_group_rule.ingress_with_self",
            "module.firewall.module.documentdb_sg.aws_security_group_rule.ingress_with_source_security_group_id",
            "module.firewall.module.ecs_sg.aws_security_group.this",
            "module.firewall.module.ecs_sg.aws_security_group.this_name_prefix",
            "module.firewall.module.ecs_sg.aws_security_group_rule.computed_egress_rules",
            "module.firewall.module.ecs_sg.aws_security_group_rule.computed_egress_with_cidr_blocks",
            "module.firewall.module.ecs_sg.aws_security_group_rule.computed_egress_with_ipv6_cidr_blocks",
            "module.firewall.module.ecs_sg.aws_security_group_rule.computed_egress_with_prefix_list_ids",
            "module.firewall.module.ecs_sg.aws_security_group_rule.computed_egress_with_self",
            "module.firewall.module.ecs_sg.aws_security_group_rule.computed_egress_with_source_security_group_id",
            "module.firewall.module.ecs_sg.aws_security_group_rule.computed_ingress_rules",
            "module.firewall.module.ecs_sg.aws_security_group_rule.computed_ingress_with_cidr_blocks",
            "module.firewall.module.ecs_sg.aws_security_group_rule.computed_ingress_with_ipv6_cidr_blocks",
            "module.firewall.module.ecs_sg.aws_security_group_rule.computed_ingress_with_prefix_list_ids",
            "module.firewall.module.ecs_sg.aws_security_group_rule.computed_ingress_with_self",
            "module.firewall.module.ecs_sg.aws_security_group_rule.computed_ingress_with_source_security_group_id",
            "module.firewall.module.ecs_sg.aws_security_group_rule.egress_rules",
            "module.firewall.module.ecs_sg.aws_security_group_rule.egress_with_cidr_blocks",
            "module.firewall.module.ecs_sg.aws_security_group_rule.egress_with_ipv6_cidr_blocks",
            "module.firewall.module.ecs_sg.aws_security_group_rule.egress_with_prefix_list_ids",
            "module.firewall.module.ecs_sg.aws_security_group_rule.egress_with_self",
            "module.firewall.module.ecs_sg.aws_security_group_rule.egress_with_source_security_group_id",
            "module.firewall.module.ecs_sg.aws_security_group_rule.ingress_rules",
            "module.firewall.module.ecs_sg.aws_security_group_rule.ingress_with_cidr_blocks",
            "module.firewall.module.ecs_sg.aws_security_group_rule.ingress_with_ipv6_cidr_blocks",
            "module.firewall.module.ecs_sg.aws_security_group_rule.ingress_with_prefix_list_ids",
            "module.firewall.module.ecs_sg.aws_security_group_rule.ingress_with_self",
            "module.firewall.module.ecs_sg.aws_security_group_rule.ingress_with_source_security_group_id",
            "module.firewall.module.load_balancer_sg.aws_security_group.this",
            "module.firewall.module.load_balancer_sg.aws_security_group.this_name_prefix",
            "module.firewall.module.load_balancer_sg.aws_security_group_rule.computed_egress_rules",
            "module.firewall.module.load_balancer_sg.aws_security_group_rule.computed_egress_with_cidr_blocks",
            "module.firewall.module.load_balancer_sg.aws_security_group_rule.computed_egress_with_ipv6_cidr_blocks",
            "module.firewall.module.load_balancer_sg.aws_security_group_rule.computed_egress_with_prefix_list_ids",
            "module.firewall.module.load_balancer_sg.aws_security_group_rule.computed_egress_with_self",
            "module.firewall.module.load_balancer_sg.aws_security_group_rule.computed_egress_with_source_security_group_id",
            "module.firewall.module.load_balancer_sg.aws_security_group_rule.computed_ingress_rules",
            "module.firewall.module.load_balancer_sg.aws_security_group_rule.computed_ingress_with_cidr_blocks",
            "module.firewall.module.load_balancer_sg.aws_security_group_rule.computed_ingress_with_ipv6_cidr_blocks",
            "module.firewall.module.load_balancer_sg.aws_security_group_rule.computed_ingress_with_prefix_list_ids",
            "module.firewall.module.load_balancer_sg.aws_security_group_rule.computed_ingress_with_self",
            "module.firewall.module.load_balancer_sg.aws_security_group_rule.computed_ingress_with_source_security_group_id",
            "module.firewall.module.load_balancer_sg.aws_security_group_rule.egress_rules",
            "module.firewall.module.load_balancer_sg.aws_security_group_rule.egress_with_cidr_blocks",
            "module.firewall.module.load_balancer_sg.aws_security_group_rule.egress_with_ipv6_cidr_blocks",
            "module.firewall.module.load_balancer_sg.aws_security_group_rule.egress_with_prefix_list_ids",
            "module.firewall.module.load_balancer_sg.aws_security_group_rule.egress_with_self",
            "module.firewall.module.load_balancer_sg.aws_security_group_rule.egress_with_source_security_group_id",
            "module.firewall.module.load_balancer_sg.aws_security_group_rule.ingress_rules",
            "module.firewall.module.load_balancer_sg.aws_security_group_rule.ingress_with_cidr_blocks",
            "module.firewall.module.load_balancer_sg.aws_security_group_rule.ingress_with_ipv6_cidr_blocks",
            "module.firewall.module.load_balancer_sg.aws_security_group_rule.ingress_with_prefix_list_ids",
            "module.firewall.module.load_balancer_sg.aws_security_group_rule.ingress_with_self",
            "module.firewall.module.load_balancer_sg.aws_security_group_rule.ingress_with_source_security_group_id",
            "module.firewall.module.service_sg.aws_security_group.this",
            "module.firewall.module.service_sg.aws_security_group.this_name_prefix",
            "module.firewall.module.service_sg.aws_security_group_rule.computed_egress_rules",
            "module.firewall.module.service_sg.aws_security_group_rule.computed_egress_with_cidr_blocks",
            "module.firewall.module.service_sg.aws_security_group_rule.computed_egress_with_ipv6_cidr_blocks",
            "module.firewall.module.service_sg.aws_security_group_rule.computed_egress_with_prefix_list_ids",
            "module.firewall.module.service_sg.aws_security_group_rule.computed_egress_with_self",
            "module.firewall.module.service_sg.aws_security_group_rule.computed_egress_with_source_security_group_id",
            "module.firewall.module.service_sg.aws_security_group_rule.computed_ingress_rules",
            "module.firewall.module.service_sg.aws_security_group_rule.computed_ingress_with_cidr_blocks",
            "module.firewall.module.service_sg.aws_security_group_rule.computed_ingress_with_ipv6_cidr_blocks",
            "module.firewall.module.service_sg.aws_security_group_rule.computed_ingress_with_prefix_list_ids",
            "module.firewall.module.service_sg.aws_security_group_rule.computed_ingress_with_self",
            "module.firewall.module.service_sg.aws_security_group_rule.computed_ingress_with_source_security_group_id",
            "module.firewall.module.service_sg.aws_security_group_rule.egress_rules",
            "module.firewall.module.service_sg.aws_security_group_rule.egress_with_cidr_blocks",
            "module.firewall.module.service_sg.aws_security_group_rule.egress_with_ipv6_cidr_blocks",
            "module.firewall.module.service_sg.aws_security_group_rule.egress_with_prefix_list_ids",
            "module.firewall.module.service_sg.aws_security_group_rule.egress_with_self",
            "module.firewall.module.service_sg.aws_security_group_rule.egress_with_source_security_group_id",
            "module.firewall.module.service_sg.aws_security_group_rule.ingress_rules",
            "module.firewall.module.service_sg.aws_security_group_rule.ingress_with_cidr_blocks",
            "module.firewall.module.service_sg.aws_security_group_rule.ingress_with_ipv6_cidr_blocks",
            "module.firewall.module.service_sg.aws_security_group_rule.ingress_with_prefix_list_ids",
            "module.firewall.module.service_sg.aws_security_group_rule.ingress_with_self",
            "module.firewall.module.service_sg.aws_security_group_rule.ingress_with_source_security_group_id",
            "module.scaling.aws_autoscaling_group.this",
            "module.scaling.aws_iam_instance_profile.ecs_profile",
            "module.scaling.aws_iam_role.role",
            "module.scaling.aws_iam_role_policy.attach_role_policy",
            "module.scaling.aws_iam_role_policy_attachment.ecs_node_role_policy",
            "module.scaling.aws_launch_template.this",
            "module.scaling.data.aws_ami.amazon_linux",
            "module.scaling.data.aws_iam_policy_document.assume_role",
            "module.scaling.data.aws_iam_policy_document.workloads",
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.gw",
            "module.vpc.aws_nat_gateway.nat",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_route_table_association.private",
            "module.vpc.aws_route_table_association.public",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.ecs",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ecs",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:654654523718:security-group/sg-011b5f34e713a93fe",
            "description": "Security group for ECS services",
            "egress": [],
            "id": "sg-011b5f34e713a93fe",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "walter-cluster-ecs-sg",
            "name_prefix": "",
            "owner_id": "654654523718",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0ca6a1fee11b317af"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.firewall.module.bastion_sg.aws_security_group.this",
            "module.firewall.module.bastion_sg.aws_security_group.this_name_prefix",
            "module.firewall.module.bastion_sg.aws_security_group_rule.computed_egress_rules",
            "module.firewall.module.bastion_sg.aws_security_group_rule.computed_egress_with_cidr_blocks",
            "module.firewall.module.bastion_sg.aws_security_group_rule.computed_egress_with_ipv6_cidr_blocks",
            "module.firewall.module.bastion_sg.aws_security_group_rule.computed_egress_with_prefix_list_ids",
            "module.firewall.module.bastion_sg.aws_security_group_rule.computed_egress_with_self",
            "module.firewall.module.bastion_sg.aws_security_group_rule.computed_egress_with_source_security_group_id",
            "module.firewall.module.bastion_sg.aws_security_group_rule.computed_ingress_rules",
            "module.firewall.module.bastion_sg.aws_security_group_rule.computed_ingress_with_cidr_blocks",
            "module.firewall.module.bastion_sg.aws_security_group_rule.computed_ingress_with_ipv6_cidr_blocks",
            "module.firewall.module.bastion_sg.aws_security_group_rule.computed_ingress_with_prefix_list_ids",
            "module.firewall.module.bastion_sg.aws_security_group_rule.computed_ingress_with_self",
            "module.firewall.module.bastion_sg.aws_security_group_rule.computed_ingress_with_source_security_group_id",
            "module.firewall.module.bastion_sg.aws_security_group_rule.egress_rules",
            "module.firewall.module.bastion_sg.aws_security_group_rule.egress_with_cidr_blocks",
            "module.firewall.module.bastion_sg.aws_security_group_rule.egress_with_ipv6_cidr_blocks",
            "module.firewall.module.bastion_sg.aws_security_group_rule.egress_with_prefix_list_ids",
            "module.firewall.module.bastion_sg.aws_security_group_rule.egress_with_self",
            "module.firewall.module.bastion_sg.aws_security_group_rule.egress_with_source_security_group_id",
            "module.firewall.module.bastion_sg.aws_security_group_rule.ingress_rules",
            "module.firewall.module.bastion_sg.aws_security_group_rule.ingress_with_cidr_blocks",
            "module.firewall.module.bastion_sg.aws_security_group_rule.ingress_with_ipv6_cidr_blocks",
            "module.firewall.module.bastion_sg.aws_security_group_rule.ingress_with_prefix_list_ids",
            "module.firewall.module.bastion_sg.aws_security_group_rule.ingress_with_self",
            "module.firewall.module.bastion_sg.aws_security_group_rule.ingress_with_source_security_group_id",
            "module.firewall.module.documentdb_sg.aws_security_group.this",
            "module.firewall.module.documentdb_sg.aws_security_group.this_name_prefix",
            "module.firewall.module.documentdb_sg.aws_security_group_rule.computed_egress_rules",
            "module.firewall.module.documentdb_sg.aws_security_group_rule.computed_egress_with_cidr_blocks",
            "module.firewall.module.documentdb_sg.aws_security_group_rule.computed_egress_with_ipv6_cidr_blocks",
            "module.firewall.module.documentdb_sg.aws_security_group_rule.computed_egress_with_prefix_list_ids",
            "module.firewall.module.documentdb_sg.aws_security_group_rule.computed_egress_with_self",
            "module.firewall.module.documentdb_sg.aws_security_group_rule.computed_egress_with_source_security_group_id",
            "module.firewall.module.documentdb_sg.aws_security_group_rule.computed_ingress_rules",
            "module.firewall.module.documentdb_sg.aws_security_group_rule.computed_ingress_with_cidr_blocks",
            "module.firewall.module.documentdb_sg.aws_security_group_rule.computed_ingress_with_ipv6_cidr_blocks",
            "module.firewall.module.documentdb_sg.aws_security_group_rule.computed_ingress_with_prefix_list_ids",
            "module.firewall.module.documentdb_sg.aws_security_group_rule.computed_ingress_with_self",
            "module.firewall.module.documentdb_sg.aws_security_group_rule.computed_ingress_with_source_security_group_id",
            "module.firewall.module.documentdb_sg.aws_security_group_rule.egress_rules",
            "module.firewall.module.documentdb_sg.aws_security_group_rule.egress_with_cidr_blocks",
            "module.firewall.module.documentdb_sg.aws_security_group_rule.egress_with_ipv6_cidr_blocks",
            "module.firewall.module.documentdb_sg.aws_security_group_rule.egress_with_prefix_list_ids",
            "module.firewall.module.documentdb_sg.aws_security_group_rule.egress_with_self",
            "module.firewall.module.documentdb_sg.aws_security_group_rule.egress_with_source_security_group_id",
            "module.firewall.module.documentdb_sg.aws_security_group_rule.ingress_rules",
            "module.firewall.module.documentdb_sg.aws_security_group_rule.ingress_with_cidr_blocks",
            "module.firewall.module.documentdb_sg.aws_security_group_rule.ingress_with_ipv6_cidr_blocks",
            "module.firewall.module.documentdb_sg.aws_security_group_rule.ingress_with_prefix_list_ids",
            "module.firewall.module.documentdb_sg.aws_security_group_rule.ingress_with_self",
            "module.firewall.module.documentdb_sg.aws_security_group_rule.ingress_with_source_security_group_id",
            "module.firewall.module.ecs_sg.aws_security_group.this",
            "module.firewall.module.ecs_sg.aws_security_group.this_name_prefix",
            "module.firewall.module.ecs_sg.aws_security_group_rule.computed_egress_rules",
            "module.firewall.module.ecs_sg.aws_security_group_rule.computed_egress_with_cidr_blocks",
            "module.firewall.module.ecs_sg.aws_security_group_rule.computed_egress_with_ipv6_cidr_blocks",
            "module.firewall.module.ecs_sg.aws_security_group_rule.computed_egress_with_prefix_list_ids",
            "module.firewall.module.ecs_sg.aws_security_group_rule.computed_egress_with_self",
            "module.firewall.module.ecs_sg.aws_security_group_rule.computed_egress_with_source_security_group_id",
            "module.firewall.module.ecs_sg.aws_security_group_rule.computed_ingress_rules",
            "module.firewall.module.ecs_sg.aws_security_group_rule.computed_ingress_with_cidr_blocks",
            "module.firewall.module.ecs_sg.aws_security_group_rule.computed_ingress_with_ipv6_cidr_blocks",
            "module.firewall.module.ecs_sg.aws_security_group_rule.computed_ingress_with_prefix_list_ids",
            "module.firewall.module.ecs_sg.aws_security_group_rule.computed_ingress_with_self",
            "module.firewall.module.ecs_sg.aws_security_group_rule.computed_ingress_with_source_security_group_id",
            "module.firewall.module.ecs_sg.aws_security_group_rule.egress_rules",
            "module.firewall.module.ecs_sg.aws_security_group_rule.egress_with_cidr_blocks",
            "module.firewall.module.ecs_sg.aws_security_group_rule.egress_with_ipv6_cidr_blocks",
            "module.firewall.module.ecs_sg.aws_security_group_rule.egress_with_prefix_list_ids",
            "module.firewall.module.ecs_sg.aws_security_group_rule.egress_with_self",
            "module.firewall.module.ecs_sg.aws_security_group_rule.egress_with_source_security_group_id",
            "module.firewall.module.ecs_sg.aws_security_group_rule.ingress_rules",
            "module.firewall.module.ecs_sg.aws_security_group_rule.ingress_with_cidr_blocks",
            "module.firewall.module.ecs_sg.aws_security_group_rule.ingress_with_ipv6_cidr_blocks",
            "module.firewall.module.ecs_sg.aws_security_group_rule.ingress_with_prefix_list_ids",
            "module.firewall.module.ecs_sg.aws_security_group_rule.ingress_with_self",
            "module.firewall.module.ecs_sg.aws_security_group_rule.ingress_with_source_security_group_id",
            "module.firewall.module.load_balancer_sg.aws_security_group.this",
            "module.firewall.module.load_balancer_sg.aws_security_group.this_name_prefix",
            "module.firewall.module.load_balancer_sg.aws_security_group_rule.computed_egress_rules",
            "module.firewall.module.load_balancer_sg.aws_security_group_rule.computed_egress_with_cidr_blocks",
            "module.firewall.module.load_balancer_sg.aws_security_group_rule.computed_egress_with_ipv6_cidr_blocks",
            "module.firewall.module.load_balancer_sg.aws_security_group_rule.computed_egress_with_prefix_list_ids",
            "module.firewall.module.load_balancer_sg.aws_security_group_rule.computed_egress_with_self",
            "module.firewall.module.load_balancer_sg.aws_security_group_rule.computed_egress_with_source_security_group_id",
            "module.firewall.module.load_balancer_sg.aws_security_group_rule.computed_ingress_rules",
            "module.firewall.module.load_balancer_sg.aws_security_group_rule.computed_ingress_with_cidr_blocks",
            "module.firewall.module.load_balancer_sg.aws_security_group_rule.computed_ingress_with_ipv6_cidr_blocks",
            "module.firewall.module.load_balancer_sg.aws_security_group_rule.computed_ingress_with_prefix_list_ids",
            "module.firewall.module.load_balancer_sg.aws_security_group_rule.computed_ingress_with_self",
            "module.firewall.module.load_balancer_sg.aws_security_group_rule.computed_ingress_with_source_security_group_id",
            "module.firewall.module.load_balancer_sg.aws_security_group_rule.egress_rules",
            "module.firewall.module.load_balancer_sg.aws_security_group_rule.egress_with_cidr_blocks",
            "module.firewall.module.load_balancer_sg.aws_security_group_rule.egress_with_ipv6_cidr_blocks",
            "module.firewall.module.load_balancer_sg.aws_security_group_rule.egress_with_prefix_list_ids",
            "module.firewall.module.load_balancer_sg.aws_security_group_rule.egress_with_self",
            "module.firewall.module.load_balancer_sg.aws_security_group_rule.egress_with_source_security_group_id",
            "module.firewall.module.load_balancer_sg.aws_security_group_rule.ingress_rules",
            "module.firewall.module.load_balancer_sg.aws_security_group_rule.ingress_with_cidr_blocks",
            "module.firewall.module.load_balancer_sg.aws_security_group_rule.ingress_with_ipv6_cidr_blocks",
            "module.firewall.module.load_balancer_sg.aws_security_group_rule.ingress_with_prefix_list_ids",
            "module.firewall.module.load_balancer_sg.aws_security_group_rule.ingress_with_self",
            "module.firewall.module.load_balancer_sg.aws_security_group_rule.ingress_with_source_security_group_id",
            "module.firewall.module.service_sg.aws_security_group.this",
            "module.firewall.module.service_sg.aws_security_group.this_name_prefix",
            "module.firewall.module.service_sg.aws_security_group_rule.computed_egress_rules",
            "module.firewall.module.service_sg.aws_security_group_rule.computed_egress_with_cidr_blocks",
            "module.firewall.module.service_sg.aws_security_group_rule.computed_egress_with_ipv6_cidr_blocks",
            "module.firewall.module.service_sg.aws_security_group_rule.computed_egress_with_prefix_list_ids",
            "module.firewall.module.service_sg.aws_security_group_rule.computed_egress_with_self",
            "module.firewall.module.service_sg.aws_security_group_rule.computed_egress_with_source_security_group_id",
            "module.firewall.module.service_sg.aws_security_group_rule.computed_ingress_rules",
            "module.firewall.module.service_sg.aws_security_group_rule.computed_ingress_with_cidr_blocks",
            "module.firewall.module.service_sg.aws_security_group_rule.computed_ingress_with_ipv6_cidr_blocks",
            "module.firewall.module.service_sg.aws_security_group_rule.computed_ingress_with_prefix_list_ids",
            "module.firewall.module.service_sg.aws_security_group_rule.computed_ingress_with_self",
            "module.firewall.module.service_sg.aws_security_group_rule.computed_ingress_with_source_security_group_id",
            "module.firewall.module.service_sg.aws_security_group_rule.egress_rules",
            "module.firewall.module.service_sg.aws_security_group_rule.egress_with_cidr_blocks",
            "module.firewall.module.service_sg.aws_security_group_rule.egress_with_ipv6_cidr_blocks",
            "module.firewall.module.service_sg.aws_security_group_rule.egress_with_prefix_list_ids",
            "module.firewall.module.service_sg.aws_security_group_rule.egress_with_self",
            "module.firewall.module.service_sg.aws_security_group_rule.egress_with_source_security_group_id",
            "module.firewall.module.service_sg.aws_security_group_rule.ingress_rules",
            "module.firewall.module.service_sg.aws_security_group_rule.ingress_with_cidr_blocks",
            "module.firewall.module.service_sg.aws_security_group_rule.ingress_with_ipv6_cidr_blocks",
            "module.firewall.module.service_sg.aws_security_group_rule.ingress_with_prefix_list_ids",
            "module.firewall.module.service_sg.aws_security_group_rule.ingress_with_self",
            "module.firewall.module.service_sg.aws_security_group_rule.ingress_with_source_security_group_id",
            "module.scaling.aws_autoscaling_group.this",
            "module.scaling.aws_iam_instance_profile.ecs_profile",
            "module.scaling.aws_iam_role.role",
            "module.scaling.aws_iam_role_policy.attach_role_policy",
            "module.scaling.aws_iam_role_policy_attachment.ecs_node_role_policy",
            "module.scaling.aws_launch_template.this",
            "module.scaling.data.aws_ami.amazon_linux",
            "module.scaling.data.aws_iam_policy_document.assume_role",
            "module.scaling.data.aws_iam_policy_document.workloads",
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.gw",
            "module.vpc.aws_nat_gateway.nat",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_route_table_association.private",
            "module.vpc.aws_route_table_association.public",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.firewall.module.bastion_sg",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.firewall.module.bastion_sg",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "this_name_prefix",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:654654523718:security-group/sg-014a2a01ed2dae8ec",
            "description": "Security group for BASTION",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow all egress traffic",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-014a2a01ed2dae8ec",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow SSH ingress traffic from bastion host",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "prod-walterwrites-bastion-sg-20250221150612158100000008",
            "name_prefix": "prod-walterwrites-bastion-sg-",
            "owner_id": "654654523718",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "dev",
              "Name": "prod-walterwrites-bastion-sg",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "prod-walterwrites-bastion-sg",
              "Terraform": "true"
            },
            "timeouts": {
              "create": "10m",
              "delete": "15m"
            },
            "vpc_id": "vpc-0ca6a1fee11b317af"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.firewall.module.bastion_sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "computed_egress_rules",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.firewall.module.bastion_sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "computed_egress_with_cidr_blocks",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.firewall.module.bastion_sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "computed_egress_with_ipv6_cidr_blocks",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.firewall.module.bastion_sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "computed_egress_with_prefix_list_ids",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.firewall.module.bastion_sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "computed_egress_with_self",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.firewall.module.bastion_sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "computed_egress_with_source_security_group_id",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.firewall.module.bastion_sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "computed_ingress_rules",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.firewall.module.bastion_sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "computed_ingress_with_cidr_blocks",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.firewall.module.bastion_sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "computed_ingress_with_ipv6_cidr_blocks",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.firewall.module.bastion_sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "computed_ingress_with_prefix_list_ids",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.firewall.module.bastion_sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "computed_ingress_with_self",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.firewall.module.bastion_sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "computed_ingress_with_source_security_group_id",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.firewall.module.bastion_sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "egress_rules",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.firewall.module.bastion_sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "egress_with_cidr_blocks",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Allow all egress traffic",
            "from_port": 0,
            "id": "sgrule-1981378916",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "-1",
            "security_group_id": "sg-014a2a01ed2dae8ec",
            "security_group_rule_id": "sgr-0950cec7d98973299",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.firewall.module.bastion_sg.aws_security_group.this",
            "module.firewall.module.bastion_sg.aws_security_group.this_name_prefix",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.firewall.module.bastion_sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "egress_with_ipv6_cidr_blocks",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.firewall.module.bastion_sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "egress_with_prefix_list_ids",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.firewall.module.bastion_sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "egress_with_self",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.firewall.module.bastion_sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "egress_with_source_security_group_id",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.firewall.module.bastion_sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "ingress_rules",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.firewall.module.bastion_sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "ingress_with_cidr_blocks",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Allow SSH ingress traffic from bastion host",
            "from_port": 22,
            "id": "sgrule-29108844",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-014a2a01ed2dae8ec",
            "security_group_rule_id": "sgr-0443e7d15ea8e201b",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 22,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.firewall.module.bastion_sg.aws_security_group.this",
            "module.firewall.module.bastion_sg.aws_security_group.this_name_prefix",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.firewall.module.bastion_sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "ingress_with_ipv6_cidr_blocks",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.firewall.module.bastion_sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "ingress_with_prefix_list_ids",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.firewall.module.bastion_sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "ingress_with_self",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.firewall.module.bastion_sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "ingress_with_source_security_group_id",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.firewall.module.documentdb_sg",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.firewall.module.documentdb_sg",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "this_name_prefix",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:654654523718:security-group/sg-0addaecdf172149d0",
            "description": "Security group for DocumentdB Service",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow all egress traffic",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0addaecdf172149d0",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow ingress Mongo port",
                "from_port": 27017,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 27017
              }
            ],
            "name": "prod-walterwrites-documentdb-sg-2025022115061565590000000c",
            "name_prefix": "prod-walterwrites-documentdb-sg-",
            "owner_id": "654654523718",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "dev",
              "Name": "prod-walterwrites-documentdb-sg",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "prod-walterwrites-documentdb-sg",
              "Terraform": "true"
            },
            "timeouts": {
              "create": "10m",
              "delete": "15m"
            },
            "vpc_id": "vpc-0ca6a1fee11b317af"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.firewall.module.documentdb_sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "computed_egress_rules",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.firewall.module.documentdb_sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "computed_egress_with_cidr_blocks",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.firewall.module.documentdb_sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "computed_egress_with_ipv6_cidr_blocks",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.firewall.module.documentdb_sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "computed_egress_with_prefix_list_ids",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.firewall.module.documentdb_sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "computed_egress_with_self",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.firewall.module.documentdb_sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "computed_egress_with_source_security_group_id",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.firewall.module.documentdb_sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "computed_ingress_rules",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.firewall.module.documentdb_sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "computed_ingress_with_cidr_blocks",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.firewall.module.documentdb_sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "computed_ingress_with_ipv6_cidr_blocks",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.firewall.module.documentdb_sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "computed_ingress_with_prefix_list_ids",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.firewall.module.documentdb_sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "computed_ingress_with_self",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.firewall.module.documentdb_sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "computed_ingress_with_source_security_group_id",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.firewall.module.documentdb_sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "egress_rules",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.firewall.module.documentdb_sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "egress_with_cidr_blocks",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Allow all egress traffic",
            "from_port": 0,
            "id": "sgrule-233518210",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "-1",
            "security_group_id": "sg-0addaecdf172149d0",
            "security_group_rule_id": "sgr-02f41e827165892c0",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.firewall.module.documentdb_sg.aws_security_group.this",
            "module.firewall.module.documentdb_sg.aws_security_group.this_name_prefix",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.firewall.module.documentdb_sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "egress_with_ipv6_cidr_blocks",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.firewall.module.documentdb_sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "egress_with_prefix_list_ids",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.firewall.module.documentdb_sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "egress_with_self",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.firewall.module.documentdb_sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "egress_with_source_security_group_id",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.firewall.module.documentdb_sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "ingress_rules",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.firewall.module.documentdb_sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "ingress_with_cidr_blocks",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Allow ingress Mongo port",
            "from_port": 27017,
            "id": "sgrule-900084284",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0addaecdf172149d0",
            "security_group_rule_id": "sgr-091e7a746ebdafc09",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 27017,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.firewall.module.documentdb_sg.aws_security_group.this",
            "module.firewall.module.documentdb_sg.aws_security_group.this_name_prefix",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.firewall.module.documentdb_sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "ingress_with_ipv6_cidr_blocks",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.firewall.module.documentdb_sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "ingress_with_prefix_list_ids",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.firewall.module.documentdb_sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "ingress_with_self",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.firewall.module.documentdb_sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "ingress_with_source_security_group_id",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.firewall.module.ecs_sg",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.firewall.module.ecs_sg",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "this_name_prefix",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:654654523718:security-group/sg-035e27d61669fc400",
            "description": "Security group for ECS",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow all egress traffic",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-035e27d61669fc400",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow SSH ingress traffic from bastion host",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "10.180.0.0/16"
                ],
                "description": "Allow ingress traffic from ALB on HTTP on ephemeral ports",
                "from_port": 32768,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 65535
              }
            ],
            "name": "prod-walterwrites-ecs-sg-20250221150614838300000009",
            "name_prefix": "prod-walterwrites-ecs-sg-",
            "owner_id": "654654523718",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "dev",
              "Name": "prod-walterwrites-ecs-sg",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "prod-walterwrites-ecs-sg",
              "Terraform": "true"
            },
            "timeouts": {
              "create": "10m",
              "delete": "15m"
            },
            "vpc_id": "vpc-0ca6a1fee11b317af"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.firewall.module.ecs_sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "computed_egress_rules",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.firewall.module.ecs_sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "computed_egress_with_cidr_blocks",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.firewall.module.ecs_sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "computed_egress_with_ipv6_cidr_blocks",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.firewall.module.ecs_sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "computed_egress_with_prefix_list_ids",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.firewall.module.ecs_sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "computed_egress_with_self",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.firewall.module.ecs_sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "computed_egress_with_source_security_group_id",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.firewall.module.ecs_sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "computed_ingress_rules",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.firewall.module.ecs_sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "computed_ingress_with_cidr_blocks",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.firewall.module.ecs_sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "computed_ingress_with_ipv6_cidr_blocks",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.firewall.module.ecs_sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "computed_ingress_with_prefix_list_ids",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.firewall.module.ecs_sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "computed_ingress_with_self",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.firewall.module.ecs_sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "computed_ingress_with_source_security_group_id",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.firewall.module.ecs_sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "egress_rules",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.firewall.module.ecs_sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "egress_with_cidr_blocks",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Allow all egress traffic",
            "from_port": 0,
            "id": "sgrule-1805342841",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "-1",
            "security_group_id": "sg-035e27d61669fc400",
            "security_group_rule_id": "sgr-0b65a7fff380cd11f",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.firewall.module.ecs_sg.aws_security_group.this",
            "module.firewall.module.ecs_sg.aws_security_group.this_name_prefix",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.firewall.module.ecs_sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "egress_with_ipv6_cidr_blocks",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.firewall.module.ecs_sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "egress_with_prefix_list_ids",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.firewall.module.ecs_sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "egress_with_self",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.firewall.module.ecs_sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "egress_with_source_security_group_id",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.firewall.module.ecs_sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "ingress_rules",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.firewall.module.ecs_sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "ingress_with_cidr_blocks",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Allow SSH ingress traffic from bastion host",
            "from_port": 22,
            "id": "sgrule-1999606841",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-035e27d61669fc400",
            "security_group_rule_id": "sgr-0731fcccd2fa70152",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 22,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.firewall.module.ecs_sg.aws_security_group.this",
            "module.firewall.module.ecs_sg.aws_security_group.this_name_prefix",
            "module.firewall.module.load_balancer_sg.aws_security_group.this",
            "module.firewall.module.load_balancer_sg.aws_security_group.this_name_prefix",
            "module.vpc.aws_vpc.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "",
            "from_port": 80,
            "id": "sgrule-3248867724",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-035e27d61669fc400",
            "security_group_rule_id": "sgr-0c95dc6ca54006320",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 80,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.firewall.module.ecs_sg.aws_security_group.this",
            "module.firewall.module.ecs_sg.aws_security_group.this_name_prefix",
            "module.firewall.module.load_balancer_sg.aws_security_group.this",
            "module.firewall.module.load_balancer_sg.aws_security_group.this_name_prefix",
            "module.vpc.aws_vpc.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "10.180.0.0/16"
            ],
            "description": "Allow ingress traffic from ALB on HTTP on ephemeral ports",
            "from_port": 32768,
            "id": "sgrule-3185824443",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-035e27d61669fc400",
            "security_group_rule_id": "sgr-05cec67ac2835042f",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 65535,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.firewall.module.ecs_sg.aws_security_group.this",
            "module.firewall.module.ecs_sg.aws_security_group.this_name_prefix",
            "module.firewall.module.load_balancer_sg.aws_security_group.this",
            "module.firewall.module.load_balancer_sg.aws_security_group.this_name_prefix",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.firewall.module.ecs_sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "ingress_with_ipv6_cidr_blocks",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.firewall.module.ecs_sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "ingress_with_prefix_list_ids",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.firewall.module.ecs_sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "ingress_with_self",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.firewall.module.ecs_sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "ingress_with_source_security_group_id",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.firewall.module.load_balancer_sg",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.firewall.module.load_balancer_sg",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "this_name_prefix",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:654654523718:security-group/sg-0be25beed20e3ed06",
            "description": "Security group for ALB",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow all egress traffic",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0be25beed20e3ed06",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTPS",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "prod-walterwrites-lb-sg-2025022115061534830000000b",
            "name_prefix": "prod-walterwrites-lb-sg-",
            "owner_id": "654654523718",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "dev",
              "Name": "prod-walterwrites-lb-sg",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "prod-walterwrites-lb-sg",
              "Terraform": "true"
            },
            "timeouts": {
              "create": "10m",
              "delete": "15m"
            },
            "vpc_id": "vpc-0ca6a1fee11b317af"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.firewall.module.load_balancer_sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "computed_egress_rules",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.firewall.module.load_balancer_sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "computed_egress_with_cidr_blocks",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.firewall.module.load_balancer_sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "computed_egress_with_ipv6_cidr_blocks",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.firewall.module.load_balancer_sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "computed_egress_with_prefix_list_ids",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.firewall.module.load_balancer_sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "computed_egress_with_self",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.firewall.module.load_balancer_sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "computed_egress_with_source_security_group_id",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.firewall.module.load_balancer_sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "computed_ingress_rules",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.firewall.module.load_balancer_sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "computed_ingress_with_cidr_blocks",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.firewall.module.load_balancer_sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "computed_ingress_with_ipv6_cidr_blocks",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.firewall.module.load_balancer_sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "computed_ingress_with_prefix_list_ids",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.firewall.module.load_balancer_sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "computed_ingress_with_self",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.firewall.module.load_balancer_sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "computed_ingress_with_source_security_group_id",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.firewall.module.load_balancer_sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "egress_rules",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.firewall.module.load_balancer_sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "egress_with_cidr_blocks",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Allow all egress traffic",
            "from_port": 0,
            "id": "sgrule-4075330012",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "-1",
            "security_group_id": "sg-0be25beed20e3ed06",
            "security_group_rule_id": "sgr-06a05d0fc07c3e946",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.firewall.module.load_balancer_sg.aws_security_group.this",
            "module.firewall.module.load_balancer_sg.aws_security_group.this_name_prefix",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.firewall.module.load_balancer_sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "egress_with_ipv6_cidr_blocks",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.firewall.module.load_balancer_sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "egress_with_prefix_list_ids",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.firewall.module.load_balancer_sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "egress_with_self",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.firewall.module.load_balancer_sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "egress_with_source_security_group_id",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.firewall.module.load_balancer_sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "ingress_rules",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "HTTPS",
            "from_port": 443,
            "id": "sgrule-1810857222",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0be25beed20e3ed06",
            "security_group_rule_id": "sgr-030167cbfb9325897",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.firewall.module.load_balancer_sg.aws_security_group.this",
            "module.firewall.module.load_balancer_sg.aws_security_group.this_name_prefix",
            "module.vpc.aws_vpc.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "HTTP",
            "from_port": 80,
            "id": "sgrule-415403605",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0be25beed20e3ed06",
            "security_group_rule_id": "sgr-060ea22cc5b42fedb",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 80,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.firewall.module.load_balancer_sg.aws_security_group.this",
            "module.firewall.module.load_balancer_sg.aws_security_group.this_name_prefix",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.firewall.module.load_balancer_sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "ingress_with_cidr_blocks",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.firewall.module.load_balancer_sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "ingress_with_ipv6_cidr_blocks",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.firewall.module.load_balancer_sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "ingress_with_prefix_list_ids",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.firewall.module.load_balancer_sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "ingress_with_self",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.firewall.module.load_balancer_sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "ingress_with_source_security_group_id",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.firewall.module.service_sg",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.firewall.module.service_sg",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "this_name_prefix",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:654654523718:security-group/sg-01e18d3754b3313b8",
            "description": "Security group for ECS Service",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow all egress traffic",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-01e18d3754b3313b8",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "Allow SSH ingress traffic from bastion host",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-014a2a01ed2dae8ec"
                ],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [],
                "description": "Allow ingress 80 port",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0be25beed20e3ed06"
                ],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [],
                "description": "Allow ingress traffic from ALB on HTTP on ephemeral ports",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0be25beed20e3ed06"
                ],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "prod-walterwrites-service-sg-20250221150612151600000007",
            "name_prefix": "prod-walterwrites-service-sg-",
            "owner_id": "654654523718",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "dev",
              "Name": "prod-walterwrites-service-sg",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "prod-walterwrites-service-sg",
              "Terraform": "true"
            },
            "timeouts": {
              "create": "10m",
              "delete": "15m"
            },
            "vpc_id": "vpc-0ca6a1fee11b317af"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.firewall.module.service_sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "computed_egress_rules",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.firewall.module.service_sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "computed_egress_with_cidr_blocks",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.firewall.module.service_sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "computed_egress_with_ipv6_cidr_blocks",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.firewall.module.service_sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "computed_egress_with_prefix_list_ids",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.firewall.module.service_sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "computed_egress_with_self",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.firewall.module.service_sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "computed_egress_with_source_security_group_id",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.firewall.module.service_sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "computed_ingress_rules",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.firewall.module.service_sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "computed_ingress_with_cidr_blocks",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.firewall.module.service_sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "computed_ingress_with_ipv6_cidr_blocks",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.firewall.module.service_sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "computed_ingress_with_prefix_list_ids",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.firewall.module.service_sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "computed_ingress_with_self",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.firewall.module.service_sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "computed_ingress_with_source_security_group_id",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.firewall.module.service_sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "egress_rules",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.firewall.module.service_sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "egress_with_cidr_blocks",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Allow all egress traffic",
            "from_port": 0,
            "id": "sgrule-2460373739",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "-1",
            "security_group_id": "sg-01e18d3754b3313b8",
            "security_group_rule_id": "sgr-0384899c8bebb390b",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.firewall.module.service_sg.aws_security_group.this",
            "module.firewall.module.service_sg.aws_security_group.this_name_prefix",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.firewall.module.service_sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "egress_with_ipv6_cidr_blocks",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.firewall.module.service_sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "egress_with_prefix_list_ids",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.firewall.module.service_sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "egress_with_self",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.firewall.module.service_sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "egress_with_source_security_group_id",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.firewall.module.service_sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "ingress_rules",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.firewall.module.service_sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "ingress_with_cidr_blocks",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.firewall.module.service_sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "ingress_with_ipv6_cidr_blocks",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.firewall.module.service_sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "ingress_with_prefix_list_ids",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.firewall.module.service_sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "ingress_with_self",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.firewall.module.service_sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "ingress_with_source_security_group_id",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Allow ingress 80 port",
            "from_port": 80,
            "id": "sgrule-631385178",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-01e18d3754b3313b8",
            "security_group_rule_id": "sgr-01180d2a90ed0b84a",
            "self": false,
            "source_security_group_id": "sg-0be25beed20e3ed06",
            "timeouts": null,
            "to_port": 80,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.firewall.module.bastion_sg.aws_security_group.this",
            "module.firewall.module.bastion_sg.aws_security_group.this_name_prefix",
            "module.firewall.module.load_balancer_sg.aws_security_group.this",
            "module.firewall.module.load_balancer_sg.aws_security_group.this_name_prefix",
            "module.firewall.module.service_sg.aws_security_group.this",
            "module.firewall.module.service_sg.aws_security_group.this_name_prefix",
            "module.vpc.aws_vpc.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Allow ingress traffic from ALB on HTTP on ephemeral ports",
            "from_port": 443,
            "id": "sgrule-549313021",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-01e18d3754b3313b8",
            "security_group_rule_id": "sgr-0ff996ec6fdeaaa6d",
            "self": false,
            "source_security_group_id": "sg-0be25beed20e3ed06",
            "timeouts": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.firewall.module.bastion_sg.aws_security_group.this",
            "module.firewall.module.bastion_sg.aws_security_group.this_name_prefix",
            "module.firewall.module.load_balancer_sg.aws_security_group.this",
            "module.firewall.module.load_balancer_sg.aws_security_group.this_name_prefix",
            "module.firewall.module.service_sg.aws_security_group.this",
            "module.firewall.module.service_sg.aws_security_group.this_name_prefix",
            "module.vpc.aws_vpc.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Allow SSH ingress traffic from bastion host",
            "from_port": 22,
            "id": "sgrule-1719209868",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-01e18d3754b3313b8",
            "security_group_rule_id": "sgr-03955566763f36abd",
            "self": false,
            "source_security_group_id": "sg-014a2a01ed2dae8ec",
            "timeouts": null,
            "to_port": 22,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.firewall.module.bastion_sg.aws_security_group.this",
            "module.firewall.module.bastion_sg.aws_security_group.this_name_prefix",
            "module.firewall.module.load_balancer_sg.aws_security_group.this",
            "module.firewall.module.load_balancer_sg.aws_security_group.this_name_prefix",
            "module.firewall.module.service_sg.aws_security_group.this",
            "module.firewall.module.service_sg.aws_security_group.this_name_prefix",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.https_listener_rules",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "backend",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:654654523718:targetgroup/prod-walterwrites-backend-tg/d74578d330009d8e",
            "arn_suffix": "targetgroup/prod-walterwrites-backend-tg/d74578d330009d8e",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 30,
                "matcher": "200-399",
                "path": "/api/health",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:654654523718:targetgroup/prod-walterwrites-backend-tg/d74578d330009d8e",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancer_arns": [
              "arn:aws:elasticloadbalancing:us-east-1:654654523718:loadbalancer/app/prod-walterwrites-alb/61833fb25a4c03d5"
            ],
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "prod-walterwrites-backend-tg",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0ca6a1fee11b317af"
          }
        }
      ]
    },
    {
      "module": "module.https_listener_rules",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "frontend",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:654654523718:targetgroup/prod-walterwrites-frontend-tg/e2c43d19d788f763",
            "arn_suffix": "targetgroup/prod-walterwrites-frontend-tg/e2c43d19d788f763",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 30,
                "matcher": "200-399",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:654654523718:targetgroup/prod-walterwrites-frontend-tg/e2c43d19d788f763",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancer_arns": [
              "arn:aws:elasticloadbalancing:us-east-1:654654523718:loadbalancer/app/prod-walterwrites-alb/61833fb25a4c03d5"
            ],
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "prod-walterwrites-frontend-tg",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0ca6a1fee11b317af"
          }
        }
      ]
    },
    {
      "module": "module.https_listener_rules",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "walter_app",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:654654523718:targetgroup/prod-walterwrites-walter-app-tg/9c20d5f462a4cd3d",
            "arn_suffix": "targetgroup/prod-walterwrites-walter-app-tg/9c20d5f462a4cd3d",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 30,
                "matcher": "200-399",
                "path": "/health",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:654654523718:targetgroup/prod-walterwrites-walter-app-tg/9c20d5f462a4cd3d",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancer_arns": [
              "arn:aws:elasticloadbalancing:us-east-1:654654523718:loadbalancer/app/prod-walterwrites-alb/61833fb25a4c03d5"
            ],
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "prod-walterwrites-walter-app-tg",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0ca6a1fee11b317af"
          }
        }
      ]
    },
    {
      "module": "module.https_listener_rules",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "wds_humanizer",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:654654523718:targetgroup/prod-walterwrites-humanizer-tg/e31dbc6ff45942b6",
            "arn_suffix": "targetgroup/prod-walterwrites-humanizer-tg/e31dbc6ff45942b6",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 30,
                "matcher": "200-399",
                "path": "/health",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:654654523718:targetgroup/prod-walterwrites-humanizer-tg/e31dbc6ff45942b6",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancer_arns": [
              "arn:aws:elasticloadbalancing:us-east-1:654654523718:loadbalancer/app/prod-walterwrites-alb/61833fb25a4c03d5"
            ],
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "prod-walterwrites-humanizer-tg",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0ca6a1fee11b317af"
          }
        }
      ]
    },
    {
      "module": "module.load_balancer",
      "mode": "managed",
      "type": "aws_lb",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:654654523718:loadbalancer/app/prod-walterwrites-alb/61833fb25a4c03d5",
            "arn_suffix": "app/prod-walterwrites-alb/61833fb25a4c03d5",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "prod-walterwrites-alb-1452373298.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:654654523718:loadbalancer/app/prod-walterwrites-alb/61833fb25a4c03d5",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "prod-walterwrites-alb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-01e18d3754b3313b8"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-090c9c9298693e917"
              },
              {
                "subnet_id": "subnet-0fdc7bef58f766d6a"
              }
            ],
            "subnets": [
              "subnet-090c9c9298693e917",
              "subnet-0fdc7bef58f766d6a"
            ],
            "tags": {
              "Name": "prod-walterwrites-alb"
            },
            "tags_all": {
              "Name": "prod-walterwrites-alb"
            },
            "vpc_id": "vpc-0ca6a1fee11b317af",
            "xff_header_processing_mode": "append",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.firewall.module.service_sg.aws_security_group.this",
            "module.firewall.module.service_sg.aws_security_group.this_name_prefix",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.load_balancer",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "http_redirect",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:654654523718:listener/app/prod-walterwrites-alb/61833fb25a4c03d5/bef13537643ee8d5",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [
                  {
                    "host": "#{host}",
                    "path": "/#{path}",
                    "port": "443",
                    "protocol": "HTTPS",
                    "query": "#{query}",
                    "status_code": "HTTP_301"
                  }
                ],
                "target_group_arn": "",
                "type": "redirect"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:654654523718:listener/app/prod-walterwrites-alb/61833fb25a4c03d5/bef13537643ee8d5",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:654654523718:loadbalancer/app/prod-walterwrites-alb/61833fb25a4c03d5",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.firewall.module.service_sg.aws_security_group.this",
            "module.firewall.module.service_sg.aws_security_group.this_name_prefix",
            "module.load_balancer.aws_lb.main",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.load_balancer",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "https",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:654654523718:listener/app/prod-walterwrites-alb/61833fb25a4c03d5/387e304099fd2b06",
            "certificate_arn": "arn:aws:acm:us-east-1:654654523718:certificate/ce586be9-fce9-4421-b0f7-dc9f91f5194a",
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:654654523718:targetgroup/prod-walterwrites-tg/f926109a915a7b9d",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:654654523718:listener/app/prod-walterwrites-alb/61833fb25a4c03d5/387e304099fd2b06",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:654654523718:loadbalancer/app/prod-walterwrites-alb/61833fb25a4c03d5",
            "mutual_authentication": [
              {
                "ignore_client_certificate_expiry": false,
                "mode": "off",
                "trust_store_arn": ""
              }
            ],
            "port": 443,
            "protocol": "HTTPS",
            "ssl_policy": "ELBSecurityPolicy-2016-08",
            "tags": {},
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.firewall.module.service_sg.aws_security_group.this",
            "module.firewall.module.service_sg.aws_security_group.this_name_prefix",
            "module.load_balancer.aws_lb.main",
            "module.load_balancer.aws_lb_target_group.main",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.load_balancer",
      "mode": "managed",
      "type": "aws_lb_listener_rule",
      "name": "app_rule",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:654654523718:targetgroup/prod-walterwrites-walter-app-tg/9c20d5f462a4cd3d",
                "type": "forward"
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:654654523718:listener-rule/app/prod-walterwrites-alb/61833fb25a4c03d5/387e304099fd2b06/0f4e0a6c6631614b",
            "condition": [
              {
                "host_header": [],
                "http_header": [],
                "http_request_method": [],
                "path_pattern": [
                  {
                    "values": [
                      "/app/*"
                    ]
                  }
                ],
                "query_string": [],
                "source_ip": []
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:654654523718:listener-rule/app/prod-walterwrites-alb/61833fb25a4c03d5/387e304099fd2b06/0f4e0a6c6631614b",
            "listener_arn": "arn:aws:elasticloadbalancing:us-east-1:654654523718:listener/app/prod-walterwrites-alb/61833fb25a4c03d5/387e304099fd2b06",
            "priority": 300,
            "tags": {},
            "tags_all": {}
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.firewall.module.service_sg.aws_security_group.this",
            "module.firewall.module.service_sg.aws_security_group.this_name_prefix",
            "module.load_balancer.aws_lb.main",
            "module.load_balancer.aws_lb_listener.https",
            "module.load_balancer.aws_lb_target_group.main",
            "module.load_balancer.aws_lb_target_group.walter_app",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.load_balancer",
      "mode": "managed",
      "type": "aws_lb_listener_rule",
      "name": "backend_rule",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:654654523718:targetgroup/prod-walterwrites-backend-tg/d74578d330009d8e",
                "type": "forward"
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:654654523718:listener-rule/app/prod-walterwrites-alb/61833fb25a4c03d5/387e304099fd2b06/37a4fbd08676c8be",
            "condition": [
              {
                "host_header": [],
                "http_header": [],
                "http_request_method": [],
                "path_pattern": [
                  {
                    "values": [
                      "/api/*"
                    ]
                  }
                ],
                "query_string": [],
                "source_ip": []
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:654654523718:listener-rule/app/prod-walterwrites-alb/61833fb25a4c03d5/387e304099fd2b06/37a4fbd08676c8be",
            "listener_arn": "arn:aws:elasticloadbalancing:us-east-1:654654523718:listener/app/prod-walterwrites-alb/61833fb25a4c03d5/387e304099fd2b06",
            "priority": 100,
            "tags": {},
            "tags_all": {}
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.firewall.module.service_sg.aws_security_group.this",
            "module.firewall.module.service_sg.aws_security_group.this_name_prefix",
            "module.load_balancer.aws_lb.main",
            "module.load_balancer.aws_lb_listener.https",
            "module.load_balancer.aws_lb_target_group.backend",
            "module.load_balancer.aws_lb_target_group.main",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.load_balancer",
      "mode": "managed",
      "type": "aws_lb_listener_rule",
      "name": "frontend_rule",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:654654523718:targetgroup/prod-walterwrites-frontend-tg/e2c43d19d788f763",
                "type": "forward"
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:654654523718:listener-rule/app/prod-walterwrites-alb/61833fb25a4c03d5/387e304099fd2b06/fcb4a4a74272c9f3",
            "condition": [
              {
                "host_header": [],
                "http_header": [],
                "http_request_method": [],
                "path_pattern": [
                  {
                    "values": [
                      "/*"
                    ]
                  }
                ],
                "query_string": [],
                "source_ip": []
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:654654523718:listener-rule/app/prod-walterwrites-alb/61833fb25a4c03d5/387e304099fd2b06/fcb4a4a74272c9f3",
            "listener_arn": "arn:aws:elasticloadbalancing:us-east-1:654654523718:listener/app/prod-walterwrites-alb/61833fb25a4c03d5/387e304099fd2b06",
            "priority": 200,
            "tags": {},
            "tags_all": {}
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.firewall.module.service_sg.aws_security_group.this",
            "module.firewall.module.service_sg.aws_security_group.this_name_prefix",
            "module.load_balancer.aws_lb.main",
            "module.load_balancer.aws_lb_listener.https",
            "module.load_balancer.aws_lb_target_group.frontend",
            "module.load_balancer.aws_lb_target_group.main",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.load_balancer",
      "mode": "managed",
      "type": "aws_lb_listener_rule",
      "name": "humanizer_rule",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:654654523718:targetgroup/prod-walterwrites-humanizer-tg/e31dbc6ff45942b6",
                "type": "forward"
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:654654523718:listener-rule/app/prod-walterwrites-alb/61833fb25a4c03d5/387e304099fd2b06/33d1b0bbb1d69773",
            "condition": [
              {
                "host_header": [],
                "http_header": [],
                "http_request_method": [],
                "path_pattern": [
                  {
                    "values": [
                      "/humanizer/*"
                    ]
                  }
                ],
                "query_string": [],
                "source_ip": []
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:654654523718:listener-rule/app/prod-walterwrites-alb/61833fb25a4c03d5/387e304099fd2b06/33d1b0bbb1d69773",
            "listener_arn": "arn:aws:elasticloadbalancing:us-east-1:654654523718:listener/app/prod-walterwrites-alb/61833fb25a4c03d5/387e304099fd2b06",
            "priority": 400,
            "tags": {},
            "tags_all": {}
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.firewall.module.service_sg.aws_security_group.this",
            "module.firewall.module.service_sg.aws_security_group.this_name_prefix",
            "module.load_balancer.aws_lb.main",
            "module.load_balancer.aws_lb_listener.https",
            "module.load_balancer.aws_lb_target_group.main",
            "module.load_balancer.aws_lb_target_group.wds_humanizer",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.load_balancer",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "backend",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:654654523718:targetgroup/prod-walterwrites-backend-tg/d74578d330009d8e",
            "arn_suffix": "targetgroup/prod-walterwrites-backend-tg/d74578d330009d8e",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 30,
                "matcher": "200-399",
                "path": "/api/health",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:654654523718:targetgroup/prod-walterwrites-backend-tg/d74578d330009d8e",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancer_arns": [
              "arn:aws:elasticloadbalancing:us-east-1:654654523718:loadbalancer/app/prod-walterwrites-alb/61833fb25a4c03d5"
            ],
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "prod-walterwrites-backend-tg",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0ca6a1fee11b317af"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.load_balancer",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "frontend",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:654654523718:targetgroup/prod-walterwrites-frontend-tg/e2c43d19d788f763",
            "arn_suffix": "targetgroup/prod-walterwrites-frontend-tg/e2c43d19d788f763",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 30,
                "matcher": "200-399",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:654654523718:targetgroup/prod-walterwrites-frontend-tg/e2c43d19d788f763",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancer_arns": [
              "arn:aws:elasticloadbalancing:us-east-1:654654523718:loadbalancer/app/prod-walterwrites-alb/61833fb25a4c03d5"
            ],
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "prod-walterwrites-frontend-tg",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0ca6a1fee11b317af"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.load_balancer",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:654654523718:targetgroup/prod-walterwrites-tg/f926109a915a7b9d",
            "arn_suffix": "targetgroup/prod-walterwrites-tg/f926109a915a7b9d",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 30,
                "matcher": "200-399",
                "path": "/health",
                "port": "80",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:654654523718:targetgroup/prod-walterwrites-tg/f926109a915a7b9d",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancer_arns": [
              "arn:aws:elasticloadbalancing:us-east-1:654654523718:loadbalancer/app/prod-walterwrites-alb/61833fb25a4c03d5"
            ],
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "prod-walterwrites-tg",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-0ca6a1fee11b317af"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.load_balancer",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "walter_app",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:654654523718:targetgroup/prod-walterwrites-walter-app-tg/9c20d5f462a4cd3d",
            "arn_suffix": "targetgroup/prod-walterwrites-walter-app-tg/9c20d5f462a4cd3d",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 30,
                "matcher": "200-399",
                "path": "/health",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:654654523718:targetgroup/prod-walterwrites-walter-app-tg/9c20d5f462a4cd3d",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancer_arns": [
              "arn:aws:elasticloadbalancing:us-east-1:654654523718:loadbalancer/app/prod-walterwrites-alb/61833fb25a4c03d5"
            ],
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "prod-walterwrites-walter-app-tg",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0ca6a1fee11b317af"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.load_balancer",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "wds_humanizer",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:654654523718:targetgroup/prod-walterwrites-humanizer-tg/e31dbc6ff45942b6",
            "arn_suffix": "targetgroup/prod-walterwrites-humanizer-tg/e31dbc6ff45942b6",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 30,
                "matcher": "200-399",
                "path": "/health",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:654654523718:targetgroup/prod-walterwrites-humanizer-tg/e31dbc6ff45942b6",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancer_arns": [
              "arn:aws:elasticloadbalancing:us-east-1:654654523718:loadbalancer/app/prod-walterwrites-alb/61833fb25a4c03d5"
            ],
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "prod-walterwrites-humanizer-tg",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0ca6a1fee11b317af"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-028f8668867810f6a",
            "arn": "arn:aws:ec2:us-east-1:654654523718:elastic-ip/eipalloc-028f8668867810f6a",
            "association_id": "eipassoc-0015aff05548648d8",
            "domain": "vpc",
            "id": "eipalloc-028f8668867810f6a",
            "network_border_group": "us-east-1",
            "network_interface": "eni-0f9987991d773ae61",
            "private_dns": "ip-10-180-10-27.ec2.internal",
            "private_ip": "10.180.10.27",
            "public_dns": "ec2-98-82-71-233.compute-1.amazonaws.com",
            "public_ip": "98.82.71.233",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Environment": "PROD",
              "ManagedBy": "Terraform",
              "Name": "prod-walterwrites-eip-nat",
              "Project": "walterwrites"
            },
            "tags_all": {
              "Environment": "PROD",
              "ManagedBy": "Terraform",
              "Name": "prod-walterwrites-eip-nat",
              "Project": "walterwrites"
            },
            "vpc": true
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.gw",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:654654523718:internet-gateway/igw-0f3818b7140255cf8",
            "id": "igw-0f3818b7140255cf8",
            "owner_id": "654654523718",
            "tags": {
              "Environment": "PROD",
              "ManagedBy": "Terraform",
              "Name": "prod-walterwrites-ig-vpc",
              "Project": "walterwrites"
            },
            "tags_all": {
              "Environment": "PROD",
              "ManagedBy": "Terraform",
              "Name": "prod-walterwrites-ig-vpc",
              "Project": "walterwrites"
            },
            "vpc_id": "vpc-0ca6a1fee11b317af"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-028f8668867810f6a",
            "association_id": "eipassoc-0015aff05548648d8",
            "connectivity_type": "public",
            "id": "nat-0a0f59b66bff8ba4c",
            "network_interface_id": "eni-0f9987991d773ae61",
            "private_ip": "10.180.10.27",
            "public_ip": "98.82.71.233",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-07fbbab7f0ea890c5",
            "tags": {
              "Environment": "PROD",
              "ManagedBy": "Terraform",
              "Name": "prod-walterwrites-nat",
              "Project": "walterwrites"
            },
            "tags_all": {
              "Environment": "PROD",
              "ManagedBy": "Terraform",
              "Name": "prod-walterwrites-nat",
              "Project": "walterwrites"
            }
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.gw",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:654654523718:route-table/rtb-0a3d5aaa247e42641",
            "id": "rtb-0a3d5aaa247e42641",
            "owner_id": "654654523718",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0a0f59b66bff8ba4c",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "PROD",
              "ManagedBy": "Terraform",
              "Name": "prod-walterwrites-private-route-table",
              "Project": "walterwrites"
            },
            "tags_all": {
              "Environment": "PROD",
              "ManagedBy": "Terraform",
              "Name": "prod-walterwrites-private-route-table",
              "Project": "walterwrites"
            },
            "timeouts": null,
            "vpc_id": "vpc-0ca6a1fee11b317af"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.gw",
            "module.vpc.aws_nat_gateway.nat",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:654654523718:route-table/rtb-0df0f941a8bbb7a1f",
            "id": "rtb-0df0f941a8bbb7a1f",
            "owner_id": "654654523718",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0f3818b7140255cf8",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "PROD",
              "ManagedBy": "Terraform",
              "Name": "prod-walterwrites-public-route-table",
              "Project": "walterwrites"
            },
            "tags_all": {
              "Environment": "PROD",
              "ManagedBy": "Terraform",
              "Name": "prod-walterwrites-public-route-table",
              "Project": "walterwrites"
            },
            "timeouts": null,
            "vpc_id": "vpc-0ca6a1fee11b317af"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_internet_gateway.gw",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0d48ce2dd36ae9482",
            "route_table_id": "rtb-0a3d5aaa247e42641",
            "subnet_id": "subnet-090c9c9298693e917"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.gw",
            "module.vpc.aws_nat_gateway.nat",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0de67fbd2031619e2",
            "route_table_id": "rtb-0a3d5aaa247e42641",
            "subnet_id": "subnet-0fdc7bef58f766d6a"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.gw",
            "module.vpc.aws_nat_gateway.nat",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-05f812258524460f6",
            "route_table_id": "rtb-0df0f941a8bbb7a1f",
            "subnet_id": "subnet-07fbbab7f0ea890c5"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_internet_gateway.gw",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0dfa655555e0e6a63",
            "route_table_id": "rtb-0df0f941a8bbb7a1f",
            "subnet_id": "subnet-0ccfa8bda1d469e86"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_internet_gateway.gw",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:654654523718:subnet/subnet-090c9c9298693e917",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.180.100.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-090c9c9298693e917",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "654654523718",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "PROD",
              "ManagedBy": "Terraform",
              "Name": "prod-walterwrites-private-subnet-01",
              "Project": "walterwrites",
              "Type": "Private"
            },
            "tags_all": {
              "Environment": "PROD",
              "ManagedBy": "Terraform",
              "Name": "prod-walterwrites-private-subnet-01",
              "Project": "walterwrites",
              "Type": "Private"
            },
            "vpc_id": "vpc-0ca6a1fee11b317af"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:654654523718:subnet/subnet-0fdc7bef58f766d6a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.180.200.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0fdc7bef58f766d6a",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "654654523718",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "PROD",
              "ManagedBy": "Terraform",
              "Name": "prod-walterwrites-private-subnet-02",
              "Project": "walterwrites",
              "Type": "Private"
            },
            "tags_all": {
              "Environment": "PROD",
              "ManagedBy": "Terraform",
              "Name": "prod-walterwrites-private-subnet-02",
              "Project": "walterwrites",
              "Type": "Private"
            },
            "vpc_id": "vpc-0ca6a1fee11b317af"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:654654523718:subnet/subnet-07fbbab7f0ea890c5",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.180.10.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-07fbbab7f0ea890c5",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "654654523718",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "PROD",
              "ManagedBy": "Terraform",
              "Name": "prod-walterwrites-public-subnet-01",
              "Project": "walterwrites",
              "Type": "Public"
            },
            "tags_all": {
              "Environment": "PROD",
              "ManagedBy": "Terraform",
              "Name": "prod-walterwrites-public-subnet-01",
              "Project": "walterwrites",
              "Type": "Public"
            },
            "vpc_id": "vpc-0ca6a1fee11b317af"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:654654523718:subnet/subnet-0ccfa8bda1d469e86",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.180.20.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0ccfa8bda1d469e86",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "654654523718",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "PROD",
              "ManagedBy": "Terraform",
              "Name": "prod-walterwrites-public-subnet-02",
              "Project": "walterwrites",
              "Type": "Public"
            },
            "tags_all": {
              "Environment": "PROD",
              "ManagedBy": "Terraform",
              "Name": "prod-walterwrites-public-subnet-02",
              "Project": "walterwrites",
              "Type": "Public"
            },
            "vpc_id": "vpc-0ca6a1fee11b317af"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:654654523718:vpc/vpc-0ca6a1fee11b317af",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.180.0.0/16",
            "default_network_acl_id": "acl-0245267eb77b86876",
            "default_route_table_id": "rtb-0513d7e5e27f03317",
            "default_security_group_id": "sg-05ad5b6c1d60a7f0a",
            "dhcp_options_id": "dopt-0c62d807b2c04b619",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0ca6a1fee11b317af",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0513d7e5e27f03317",
            "owner_id": "654654523718",
            "tags": {
              "Environment": "PROD",
              "ManagedBy": "Terraform",
              "Name": "prod-walterwrites-vpc",
              "Project": "walterwrites"
            },
            "tags_all": {
              "Environment": "PROD",
              "ManagedBy": "Terraform",
              "Name": "prod-walterwrites-vpc",
              "Project": "walterwrites"
            }
          },
          "create_before_destroy": true
        }
      ]
    }
  ]
}